--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
   <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
   </head>
-  <body onload='parent.resizeIframe(document.body.scrollHeight)'>
+  <body>
     {{ content }}
   </body>
 </html>
