--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-    <base target="_top" />
+    <base target="_parent" />
   </head>
   <body>
     {{ content }}
